fix z-index issue with floating navbar

--- a/octoprint_dashboard/static/css/dashboard.css
+++ b/octoprint_dashboard/static/css/dashboard.css
@@ -512,7 +512,7 @@ svg text {
   position: fixed;
   top: 0px;
   left: 0px;
-  z-index: 1000;
+  z-index: 100000;
 }
 
 .dashboardContainer.dashboard-full .dashboardGridItem {
